Hopefully fixed the major height issue with images having a height of over 3000 pixels on safari mobile

--- a/CSS/mainDesktop.css
+++ b/CSS/mainDesktop.css
@@ -121,15 +121,3 @@
     height: max-content;
     }
 
-/* .linear-gradient--cover-shadow{
-    position: absolute;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 4;
-    width:  100%;
-    height: 100%;
-
-    bottom: 0;
-    right: 0;
-    z-index: 5;
-    border: 3px solid var(--border-color);
-    } */
