--- a/CSS/mediaQuery.css
+++ b/CSS/mediaQuery.css
@@ -154,27 +154,35 @@
             width: 130px;
         }
         .img-desert{
+            height: 95.362px;
             top: 0px;
         }   
         .img-sunrise {
+            height: 189.450px;
             top: 0px;
         }
         .img-woods {
+            height: 184px;
             top: -102px;
         }
         .img-sunflowers {
+            height: 222.062px;
             top: -104px;
         }
         .img-khazix {
+            height: 96.188px;
             top: -124px;
         }
         .img-windmill {
+            height: 134.600px;
             top: -248px;
         }
         .img-ocean {
+            height: 103.637px;
             top: -108px;
         }     
         .img-town {
+            height: 114.200px;
             top: -112px;
         }
         .profile-picture { 
